# multithreaded-server

./: CMakeLists.txt
echo/: echoclient  echoclient.c  echoserver  echoserver.c
gflib/: gf-student.h  gfclient-student.h  gfclient.c  gfclient_download  gfserver-student.h  gfserver.c  gfserver_main
mtgf/: gfclient_download  gfserver-student.h  gfserver_main  gfserver_main.c  handler.c
transfer/: 6200.txt  transferclient  transferclient.c  transferserver  transferserver.c
